# Sariel

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
examples/cypher/: identity_health_check.cypher  prioritized_attack_paths.cypher
examples/network_switches/: README.md  core-sw-01.cfg  example.switches.yaml
sariel/ai/: README.md  attack_mapper.py  graph_context.py  graph_writer.py  prompts.py  review_queries.cypher  schemas.py  validators.py
sariel/analysis/: __init__.py  path_prioritizer.py
sariel/api/: acknowledgements.py  ai_routes.py  deps.py  main.py
sariel/api/routers/: admin.py  assets.py  paths.py  risks.py  traversal.py
sariel/connectors/: base.py
sariel/connectors/ad/: __init__.py  inventory.py
sariel/connectors/aws/: resources.py  vulnerabilities.py
sariel/connectors/azure/: entra.py  resources.py
sariel/connectors/dns/: __init__.py  inventory.py
sariel/connectors/fortinet/: __init__.py  inventory.py
sariel/connectors/manageengine/: inventory.py
sariel/connectors/nessus/: __init__.py  api.py  nessus.py
sariel/connectors/networking/: network_switches.py
sariel/connectors/solarwinds/: inventory.py
sariel/db/: constraints.cypher  neo4j.py
sariel/engine/: patterns.py  runner.py  techniques.py  traversal.py
sariel/explainer/: llm.py
sariel/graph/: network_switch_writer.py  queries.py  topology.py  writer.py
sariel/ingest/: network_switches.py  normalize.py  prioritize_paths.py  reconcile_graph.py
sariel/models/: config.py  entities.py
sariel/normalization/: deduplicator.py  identity_resolver.py  network_linker.py  os_normalizer.py  port_enricher.py
sariel/scheduler/: jobs.py
sariel/scoring/: engine.py
sariel/services/: acknowledgements.py
scripts/: after_seed_demo.py  duplicatePathCleanup.py  import_ad.py  import_directory_dns.py  import_fortinet.py  import_inventory.py  import_nessus.py  import_nessus_api.py  init_db.py  post_ingest_link.py  seed_demo.py
scripts/sariel_identity_reconciliation_patch/: README.md
tests/: test_validators.py
tests/unit/: test_aws_connector.py  test_normalization.py  test_scoring.py
(+4 files in other folders)
