[build-system]
requires = ["setuptools>=68", "wheel"]
# build-backend = "setuptools.backends.legacy:build"
build-backend = "setuptools.build_meta"

[project]
name = "sariel"
version = "0.1.0"
description = "Context-aware cloud attack path detection — AWS + Azure/Entra"
requires-python = ">=3.11"
dependencies = [
    # Core
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    # API
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    # Graph
    "neo4j>=5.17",
    # Database
    "asyncpg>=0.29",
    # Cache
    "redis>=5.0",
    # Scheduler
    "apscheduler>=3.10",
    # AWS
    "boto3>=1.34",
    "botocore>=1.34",
    "requests>=2.31",
    # AD LDAP
    "ldap3>=2.9",
    # Azure (optional — install separately if needed)
    # "azure-identity>=1.15",
    # "azure-mgmt-compute>=30.0",
    # "azure-mgmt-network>=25.0",
    # "azure-mgmt-storage>=21.0",
    # "azure-mgmt-keyvault>=10.0",
    # "azure-mgmt-resource>=23.0",
    # "msrest>=0.7",
    # LLM (optional)
    # "anthropic>=0.23",
    # "openai>=1.12",
]

[project.optional-dependencies]
azure = [
    "azure-identity>=1.15",
    "azure-mgmt-compute>=30.0",
    "azure-mgmt-network>=25.0",
    "azure-mgmt-storage>=21.0",
    "azure-mgmt-keyvault>=10.0",
    "azure-mgmt-resource>=23.0",
]
llm = [
    "anthropic>=0.23",
    "openai>=1.12",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "ruff>=0.3",
    "mypy>=1.9",
    "moto[ec2,iam,s3,secretsmanager,inspector2]>=5.0",
]
ai = [
  "openai>=1.0.0",
  "pydantic>=2.0.0",
  "neo4j>=5.0.0",
]

[project.scripts]
sariel-api    = "sariel.api.main:app"
sariel-worker = "sariel.scheduler.jobs:run_scheduler"
sariel-init   = "scripts.init_db:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sariel*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
